syntax = "proto3";

package de.uniba.rz.io.rpc;
option java_multiple_files = true;
option java_generic_services = true;

import "google/protobuf/empty.proto";

service TicketManagement{
  rpc createNewTicket(TicketTransferObject) returns(TicketTransferObject);
  rpc getAllTickets(google.protobuf.Empty) returns(TicketsTransferObject);
  rpc getTicketById(TicketIDTransferObject) returns(TicketTransferObject);
  rpc updateTicket(TicketIDStatusTransferObject) returns(TicketTransferObject);
  rpc getTicketsByName(TicketNameTransferObject) returns(TicketsTransferObject);
  rpc getTicketsByNameAndType(TicketNameTypeTransferObject) returns(TicketsTransferObject);
  rpc autoUpdate(stream AutoUpdateMessage) returns(stream TicketTransferObject) ;
}

enum Type {
  TASK = 0;
  ENHANCEMENT = 1;
  BUG = 2;
  QUESTION = 3;
}

enum Priority {
  CRITICAL = 0;
  MAJOR = 1;
  MINOR = 2;
}

enum Status {
  NEW = 0;
  ACCEPTED = 1;
  REJECTED = 2;
  CLOSED = 3;
}

message TicketTransferObject {
  int32 id = 1;
  string reporter = 2;
  string topic = 3;
  string description = 4;
  Type type = 5;
  Priority priority = 6;
  Status status = 7;
}

message TicketsTransferObject {
  repeated TicketTransferObject tickets = 1;
}

message TicketIDTransferObject {
  int32 id = 1;
}

message TicketNameTransferObject {
  string name = 1;
}

message TicketNameTypeTransferObject {
  string name = 1;
  Type type = 2;
}

message TicketIDStatusTransferObject {
  int32 id = 1;
  Status status =2;
}

message AutoUpdateMessage {
  string message = 1;
}

